# spicy

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  clatil-clear.sh  clatil-compile.sh  clatil-decompile-bloodmoon.sh  clatil-decompile-template.sh  clatil-decompile-vanilla.sh  settings.cfg
common/docs/: reference.md
res/: template-for-gitignore
res/config/: openmw.cfg
res/openmw-linux/: esmtool.x86_64  niftest  niftest.x86_64  openmw-bulletobjecttool  openmw-iniimporter  openmw-launcher.x86_64  openmw-navmeshtool
res/openmw-linux/lib/: libDetour.so.1  libQt5Concurrent.so.5.15.8  libosgParticle.so.3.6.5  libosgSim.so.3.6.5  libunshield.so.0
res/openmw-linux/resources/: version
res/openmw-windows/: openmw.cfg.install
res/openmw/config/: openmw.cfg
res/openmw/openmw-linux/: README.packagecontents.txt  openmw-essimporter.x86_64  openmw-wizard  openmw.cfg
res/openmw/openmw-windows/: CI-ID.txt  gamecontrollerdb.txt
res/template-assets/icons/: default icon.dds  tx_goldicon.dds  weight.dds
res/template-assets/meshes/: BasicPlayer.dae  BasicPlayerBody.dae  marker_divine.dae  marker_door.dae  marker_error.dae  marker_north.dae  marker_prison.dae  marker_temple.dae  marker_travel.dae  sky_atmosphere.dae
res/template-assets/textures/: BasicPlayer.dds  _land_default.dds  compass.dds  cursor_drop_ground.dds  door_icon.dds  menu_bar_blue.dds  menu_bar_gray.dds  menu_bar_green.dds  (+136 more)
src/: args.rs  constants.rs  dae.rs  main.rs  record.rs  records.rs  utils.rs
src/openmw/: README.md
src/tes3conv/: README.md
src/world_gen/: cell.rs  world.rs
(+2328 files in other folders)
